# healthnet

./: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  run_webapp.py  server.py
client/backend/: CSVDataset.py  main.py  run_client.py
client/frontend/: package.json
client/frontend/src/: App.jsx  main.jsx
client_app/backend/: CSVDataset.py  main.py  requirements.txt  run_client.py
client_app/frontend/: index.html  package.json
client_app/frontend/src/: App.jsx
gh-pages-dashboard/: demo.js  index.html
server/: .env.example  env_loader.py  run_webapp.py  server.py
server/static/: dashboard_script.js
server/templates/: dashboard.html
test/: server.py
